layout improvements in horiz

--- a/aartics/projects/aarti_horiz/index.htm
+++ b/aartics/projects/aarti_horiz/index.htm
@@ -6,7 +6,6 @@
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--     <script src="js/jquery.jInvertScroll.js"></script> -->
     <link rel="stylesheet" href="css/aartics.css" />
     <link rel="icon" 
       type="image/png" 
@@ -25,7 +24,8 @@
     </header>
     <div class="backgroundgrad">
     </div>
-    <div class="horizon scroll">
+    <div class="horizon parent">
+      <div class="child1">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3500 760" id="bigsvg">
   <polygon id="k01" class="cls-1" points="2912.5 378.5 3050.5 378.5 3200.5 120.5 2917.5 222.5 2867.5 301.5 2912.5 378.5"/>
   <polygon id="k02" class="cls-1" points="2867.5 455.5 3012.5 558.5 3200.5 636.5 3050.5 378.5 2912.5 378.5 2867.5 455.5"/>
@@ -257,7 +257,6 @@
       <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch">architecture &amp;</text>
       <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch">urbanism</text>
   </g>
-  <polygon id="_20" data-name="20" class="cls-2" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
   <polygon id="xx05" class="cls-1" points="2580.5 556.5 2546.5 545.5 2594.5 462.5 2631.5 468.5 2580.5 556.5"/>
   <polygon id="_40" data-name="40" class="cls-2" points="2734.09 468.5 2631.91 468.5 2580.81 557 2631.91 645.5 2734.09 645.5 2785.19 557 2734.09 468.5"/>
   <polygon id="xx02" class="cls-1" points="2885.5 292.5 2874.5 297.5 2826.5 379.5 2835.68 378.5 2885.5 292.5"/>
@@ -269,23 +268,6 @@
   </g>
   <polygon id="_46" data-name="46" class="cls-2" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
   <polygon id="s86" class="cls-1" points="2833.5 293.5 2939.5 273.5 3060.5 273.5 2934.5 293.5 2833.5 293.5"/>
-  <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
-  <clipPath id="clipPath_contact_box">
-      <polygon points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-  </clipPath>
-      <image width="770" height="770" x="-1" y="-5" data-x-rel="-725" xlink:href="img/contact_intro.png" class="image" id="contact_intro"/>
-      <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-      <text x="205" y="382" data-x-rel="-520" id="aarti">aarti</text>
-      <text x="290" y="382" data-x-rel="-435" id="c">c</text>
-      <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
-      <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
-      <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + product</text>
-      <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
-      <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
-      <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-      <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
-      <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf">| &nbsp; &nbsp; resume</a></text>
-  </g>
   <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
       <clipPath id="clipPath_wolf_box">
           <polygon points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
@@ -319,6 +301,7 @@
       <text x="1230" y="350" data-x-rel="-180" id="trsf10"class="projectdescription"><a href="projects/sfac">choosing public art</a></text>
       <text x="1280" y="460" data-x-rel="-130" id="trsf8" class="projectname"><a href="projects/sfac">sfac</a></text>                
   </g>
+  <polygon id="_20" data-name="20" class="cls-2" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
   <g id="mumbai_box" data-attach="#_30" class="attached">
       <polygon id="_30" data-name="30" class="cls-2 project_box_arch has_link" points="2139.72 381.5 1998.28 381.5 1927.55 504 1998.28 626.5 2139.72 626.5 2210.45 504 2139.72 381.5"/>
       <text x="2000" y="400" data-x-rel="-190" id="mumbai0" class="casestudy"><a href="projects/mumbai">URBAN PLANNING:</a></text>
@@ -355,6 +338,28 @@
       <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
   </g>                 
         </svg>
+      </div>
+      <div class="child2">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3500 760" id="halo">
+          <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
+            <clipPath id="clipPath_contact_box">
+                <polygon points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
+            </clipPath>
+                <image width="770" height="770" x="-1" y="-5" data-x-rel="-725" xlink:href="img/contact_intro.png" class="image" id="contact_intro"/>
+                <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
+                <text x="205" y="382" data-x-rel="-520" id="aarti">aarti</text>
+                <text x="290" y="382" data-x-rel="-435" id="c">c</text>
+                <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
+                <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
+                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + product</text>
+                <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
+                <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
+                <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+                <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
+                <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf">| &nbsp; &nbsp; resume</a></text>
+            </g>
+          </svg>
+      </div>
     </div>
 	<script src="js/data.js"></script>
     <script src="js/app.js"></script>
