--- a/aartics/projects/aarti_horiz/index.htm
+++ b/aartics/projects/aarti_horiz/index.htm
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/aartics.css" />
     <link rel="icon" 
       type="image/png" 
@@ -14,19 +15,51 @@
 <body>
     <header>
       <ul id="ul_top_hypers">
-        <li class="a_top_hypers"><button id="area1">Home</button></li>
-        <li class="a_top_hypers"><button id="area2">UX Design</button></li>
-        <li class="a_top_hypers"><button id="area3">Architecture</button></li>
-        <li class="a_top_hypers"><button id="area4">Products</button></li>
-        <li class="a_top_hypers"><button id="area5">Engineering</button></li>
+        <li class="a_top_hypers"><button id="area1">About</button></li>
+        <li class="a_top_hypers"><button id="area2">UX Designer</button></li>
+        <li class="a_top_hypers"><button id="area3">Architect</button></li>
+        <li class="a_top_hypers"><button id="area4">Maker</button></li>
+        <li class="a_top_hypers"><button id="area5">Engineer</button></li>
         <li class="a_top_hypers"><button id="area6">Resume</button></li>
     </ul>
     </header>
     <div class="backgroundgrad">
     </div>
+    <div class="child3">
+        <h1>hello world, i'm aarti...</h1>
+        <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures. I am passionate about mixed realities, and I'm not afraid of complexity.<br><br><br><br>see my <span>UX projects</span> or dive into <span>other designs.</span></p>
+    </div>
     <div class="horizon parent">
+        <div class="child2">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -15 3500 760" id="halo">
+          <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
+            <!--<clipPath id="clipPath_contact_box">
+                <polygon points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
+            </clipPath>-->
+                <!--<image width="770" height="770" x="-1" y="-5" data-x-rel="-725" xlink:href="img/contact_intro.png" class="image" id="contact_intro"/>-->
+                <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
+                
+                <text x="1010" y="393" data-x-rel="-67" id="aarti">&#9900;&#9900;</text>
+                <!--<text x="590" y="382" data-x-rel="-435" id="c">c</text>-->
+                <!--<text x="625" y="382" data-x-rel="-400" id="sharma">sharma</text>-->
+                <!--<text x="780" y="400" data-x-rel="-246" id="pipe">|</text>-->
+                <!-- <text x="811" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + product</text>
+                <text x="811" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
+                <text x="811" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text> -->
+<!--                 <text x="543" y="600" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text> -->
+<!--                 <text x="723" y="600" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text> -->
+<!--                 <text x="838" y="600" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf">| &nbsp; &nbsp; resume</a></text> -->
+            </g>
+              <defs>
+                <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
+                  <stop offset="95%"   stop-color="#22313f"/>
+                  <stop offset="5%" stop-color="#fff"/>
+                </linearGradient>
+              </defs>
+          </svg>
+      </div>
       <div class="child1">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3500 760" id="bigsvg">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -15 3500 760" id="bigsvg">
   <polygon id="k01" class="cls-1" points="2912.5 378.5 3050.5 378.5 3200.5 120.5 2917.5 222.5 2867.5 301.5 2912.5 378.5"/>
   <polygon id="k02" class="cls-1" points="2867.5 455.5 3012.5 558.5 3200.5 636.5 3050.5 378.5 2912.5 378.5 2867.5 455.5"/>
   <polygon id="s95" class="cls-1" points="2868.5 459.5 2903.5 463.5 2951.5 546.5 2913.5 538.5 2868.5 459.5"/>
@@ -338,27 +371,6 @@
       <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
   </g>                 
         </svg>
-      </div>
-      <div class="child2">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3500 760" id="halo">
-          <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
-            <clipPath id="clipPath_contact_box">
-                <polygon points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-            </clipPath>
-                <image width="770" height="770" x="-1" y="-5" data-x-rel="-725" xlink:href="img/contact_intro.png" class="image" id="contact_intro"/>
-                <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-                <text x="205" y="382" data-x-rel="-520" id="aarti">aarti</text>
-                <text x="290" y="382" data-x-rel="-435" id="c">c</text>
-                <text x="325" y="382" data-x-rel="-400" id="sharma">sharma</text>
-                <text x="480" y="400" data-x-rel="-246" id="pipe">|</text>
-                <text x="511" y="360" data-x-rel="-212" id="title3" class="desc_text">ux + product</text>
-                <text x="511" y="382" data-x-rel="-212" id="title1" class="desc_text">multidisciplinary</text>
-                <text x="511" y="404" data-x-rel="-212" id="title2" class="desc_text">designer</text>
-                <text x="190" y="440" data-x-rel="-535" id="gmail1" class="contact_text"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-                <text x="370" y="440" data-x-rel="-355" id="linkedin1" class="contact_text"><a href="https://www.linkedin.com/in/aartics" target="_blank">| &nbsp; &nbsp; linkedin</a></text>
-                <text x="485" y="440" data-x-rel="-240" id="resume1" class="contact_text"><a href="aartics_resume.pdf">| &nbsp; &nbsp; resume</a></text>
-            </g>
-          </svg>
       </div>
     </div>
 	<script src="js/data.js"></script>
