smooth animation to breadcrumbs

--- a/aartics/projects/aarti_horiz/index.htm
+++ b/aartics/projects/aarti_horiz/index.htm
@@ -15,12 +15,12 @@
 <body>
     <header>
       <ul id="ul_top_hypers">
-        <li class="a_top_hypers"><button id="area1">About</button></li>
-        <li class="a_top_hypers"><button id="area2">UX Designer</button></li>
-        <li class="a_top_hypers"><button id="area3">Architect</button></li>
-        <li class="a_top_hypers"><button id="area4">Maker</button></li>
-        <li class="a_top_hypers"><button id="area5">Engineer</button></li>
-        <li class="a_top_hypers"><button id="area6">Resume</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area1">About</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area2">UX Designer</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area3">Architect</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area4">Maker</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area5">Engineer</button></li>
+        <li class="a_top_hypers"><button class="topbut" id="area6">Resume</button></li>
     </ul>
     </header>
     <div class="backgroundgrad">
@@ -28,6 +28,15 @@
     <div class="child3">
         <h1>hello world, i'm aarti...</h1>
         <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures. I am passionate about mixed realities, and I'm not afraid of complexity.<br><br><br><br>see my <span>UX projects</span> or dive into <span>other designs.</span></p>
+    </div>
+    <div class="child4 bzuttons">
+      <ul id="ul_home_hypers">
+          <li class="home_buts"><button class="homebut" id="bz1">UX Designer</button></li>
+          <li class="home_buts"><button class="homebut" id="bz2">Architect</button></li>
+          <li class="home_buts"><button class="homebut" id="bz3">Maker</button></li>
+          <li class="home_buts"><button class="homebut" id="bz4">Engineer</button></li>
+          <li class="home_buts"><button class="homebut" id="bz5">Resume</button></li>
+      </ul>
     </div>
     <div class="horizon parent">
         <div class="child2">
@@ -52,7 +61,7 @@
             </g>
               <defs>
                 <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
-                  <stop offset="95%"   stop-color="#22313f"/>
+                  <stop offset="95%" stop-color="#22313f"/>
                   <stop offset="5%" stop-color="#fff"/>
                 </linearGradient>
               </defs>
@@ -63,7 +72,7 @@
   <polygon id="k01" class="cls-1" points="2912.5 378.5 3050.5 378.5 3200.5 120.5 2917.5 222.5 2867.5 301.5 2912.5 378.5"/>
   <polygon id="k02" class="cls-1" points="2867.5 455.5 3012.5 558.5 3200.5 636.5 3050.5 378.5 2912.5 378.5 2867.5 455.5"/>
   <polygon id="s95" class="cls-1" points="2868.5 459.5 2903.5 463.5 2951.5 546.5 2913.5 538.5 2868.5 459.5"/>
-  <polygon id="s37" class="cls-1" points="2086.5 648.5 2031.5 622.5 1983.5 539.5 2034.5 559.5 2086.5 648.5"/>
+<!--   <polygon id="s37" class="cls-1" points="2086.5 648.5 2031.5 622.5 1983.5 539.5 2034.5 559.5 2086.5 648.5"/> -->
   <polygon id="yy2" class="cls-1" points="2454.5 623.5 2315.5 566.5 2349.5 501.5 2500.5 544.5 2454.5 623.5"/>
   <polygon id="xx04" class="cls-1" points="2664.5 302.5 2684.5 296.5 2732.5 379.5 2708.5 379.5 2664.5 302.5"/>
   <polygon id="s8" class="cls-1" points="1499.5 179.5 1537.5 246.5 1552.5 242.5 1512.5 173.5 1499.5 179.5"/>
@@ -83,15 +92,15 @@
   <polygon id="s46" class="cls-1" points="1378.5 64.5 1438.5 169.5 1438.5 169.5 1362.5 256.5 1326.5 193.5 1378.5 64.5"/>
   <polygon id="s99" class="cls-1" points="1048.5 550.5 1074.5 596.5 1012.5 704.5 999.5 635.5 1048.5 550.5"/>
   <polygon id="s110" class="cls-1" points="1401.5 191.5 1472.5 192.5 1494.5 177.5 1417.5 177.5 1401.5 191.5"/>
-  <polygon id="s28" class="cls-1" points="1683.5 567.5 1719.5 503.5 1965.5 541.5 1918.5 622.5 1683.5 567.5"/>
+<!--   <polygon id="s28" class="cls-1" points="1683.5 567.5 1719.5 503.5 1965.5 541.5 1918.5 622.5 1683.5 567.5"/> -->
   <polygon id="s65" class="cls-1" points="1647.5 558.5 1747.74 558.5 1781.5 567.5 1672.5 567.5 1647.5 558.5"/>
   <polygon id="s63" class="cls-1" points="2097.5 192.5 2131.5 132.5 2165.5 104.5 2125.5 172.5 2097.5 192.5"/>
   <polygon id="_25" data-name="25" class="cls-2" points="2244.51 104.08 2165.17 104.08 2125.5 172.79 2165.17 241.5 2244.51 241.5 2284.17 172.79 2244.51 104.08"/>
   <polygon id="s41" class="cls-1" points="1794.5 241.5 1826.5 317.5 2074.5 303.5 2029.5 224.5 1794.5 241.5"/>
   <polygon id="s40" class="cls-1" points="2025.5 380.5 2070.5 303.5 1826.5 317.5 1789.5 379.5 2025.5 380.5"/>
   <polygon id="s52" class="cls-1" points="1789.5 241.5 1831.5 170.5 2074.5 146.5 2029.5 224.5 1789.5 241.5"/>
-  <polygon id="s60" class="cls-1" points="2348.5 460.5 2306.5 453.5 2265.5 525.5 2303.5 539.5 2348.5 460.5"/>
-  <polygon id="s62" class="cls-1" points="2113.5 634.5 2096.5 567.5 2189.5 634.5 2238.5 719.5 2113.5 634.5"/>
+<!--   <polygon id="s60" class="cls-1" points="2348.5 460.5 2306.5 453.5 2265.5 525.5 2303.5 539.5 2348.5 460.5"/> -->
+<!--   <polygon id="s62" class="cls-1" points="2113.5 634.5 2096.5 567.5 2189.5 634.5 2238.5 719.5 2113.5 634.5"/> -->
   <polygon id="s57" class="cls-1" points="2244.5 241.5 2284.5 172.5 2514.5 64.5 2454.5 169.5 2244.5 241.5"/>
   <polygon id="s56" class="cls-1" points="2372.5 298.5 2324.42 215.5 2454.5 169.5 2514.5 274.5 2372.5 298.5"/>
   <polygon id="s94" class="cls-1" points="2746.5 564.5 2781.5 625.5 2927.5 702.5 2881.5 622.5 2746.5 564.5"/>
@@ -180,16 +189,16 @@
       <text x="2000" y="190" data-x-rel="-165" id="grpd2" class="titleprod">graphics</text>
   </g>
   <polygon id="s50" class="cls-1" points="1855.5 380.5 1743.5 380.5 1792.5 462.5 1916.5 486.5 1855.5 380.5"/>
-  <polygon id="s29" class="cls-1" points="1683.5 567.5 1918.5 622.5 1965.5 703.5 1719.5 628.5 1683.5 567.5"/>
-  <polygon id="s27" class="cls-1" points="1719.5 503.5 1790.5 503.5 2058.5 541.5 1965.5 541.5 1719.5 503.5"/>
+<!--   <polygon id="s29" class="cls-1" points="1683.5 567.5 1918.5 622.5 1965.5 703.5 1719.5 628.5 1683.5 567.5"/> -->
+<!--   <polygon id="s27" class="cls-1" points="1719.5 503.5 1790.5 503.5 2058.5 541.5 1965.5 541.5 1719.5 503.5"/> -->
   <polygon id="_19" data-name="19" class="cls-2" points="1851.86 462.96 1756.29 462.96 1708.5 545.73 1756.29 628.5 1851.86 628.5 1899.65 545.73 1851.86 462.96"/>
-  <polygon id="s102" class="cls-1" points="1782.5 756.5 1756.5 626.5 1816.5 626.5 1837.5 662.5 1782.5 756.5"/>
+<!--   <polygon id="s102" class="cls-1" points="1782.5 756.5 1756.5 626.5 1816.5 626.5 1837.5 662.5 1782.5 756.5"/> -->
   <polygon id="s108" class="cls-1" points="2156.5 558.5 2063.5 527.5 2018.5 455.5 2104.5 469.5 2156.5 558.5"/>
-  <polygon id="_23" data-name="23" class="cls-2" points="2058.51 541.83 1965.17 541.83 1918.5 622.66 1965.17 703.5 2058.51 703.5 2105.18 622.66 2058.51 541.83"/>
-  <polygon id="s61" class="cls-1" points="2182.5 525.5 2265.5 525.5 2303.48 539.07 2335.5 550.5 2238.5 550.5 2182.5 525.5"/>
+<!--   <polygon id="_23" data-name="23" class="cls-2" points="2058.51 541.83 1965.17 541.83 1918.5 622.66 1965.17 703.5 2058.51 703.5 2105.18 622.66 2058.51 541.83"/> -->
+<!--   <polygon id="s61" class="cls-1" points="2182.5 525.5 2265.5 525.5 2303.48 539.07 2335.5 550.5 2238.5 550.5 2182.5 525.5"/> -->
   <polygon id="_33" data-name="33" class="cls-2" points="2439.42 460.56 2348.8 460.56 2303.5 539.03 2348.8 617.5 2439.42 617.5 2484.72 539.03 2439.42 460.56"/>
   <polygon id="s71" class="cls-1" points="2503.5 470.5 2492.5 442.5 2529.5 382.5 2555.5 382.5 2503.5 470.5"/>
-  <polygon id="_34" data-name="34" class="cls-2" points="2335.79 550.5 2238.21 550.5 2189.43 635 2238.21 719.5 2335.79 719.5 2384.57 635 2335.79 550.5"/>
+<!--   <polygon id="_34" data-name="34" class="cls-2" points="2335.79 550.5 2238.21 550.5 2189.43 635 2238.21 719.5 2335.79 719.5 2384.57 635 2335.79 550.5"/> -->
   <g id="coimbatore" data-attach="#_29" class="attached raleway">
       <polygon id="_29" data-name="29" class="cls-2 project_box_arch has_link" points="2189.67 469.5 2086.33 469.5 2034.65 559 2086.33 648.5 2189.67 648.5 2241.35 559 2189.67 469.5"/>
       <text x="2000" y="490" data-x-rel="-150" id="uda1" class="casestudy"><a href="projects/coimbatore">ARCHITECTURE:</a></text>
@@ -213,8 +222,8 @@
   <polygon id="s16" class="cls-1" points="1157.5 379.5 1200.5 452.5 1227.5 467.5 1177.5 379.5 1157.5 379.5"/>
   <polygon id="s15" class="cls-1" points="1158.5 524.5 1075.5 524.5 1075.5 549.5 1172.5 549.5 1158.5 524.5"/>
   <polygon id="s11" class="cls-1" points="1509.5 462.5 1539.54 468.65 1487.5 558.5 1461.5 546.5 1509.5 462.5"/>
-  <polygon id="s26" class="cls-1" points="1672.5 756.5 1504.5 628.5 1469.5 567.5 1618.5 661.5 1672.5 756.5"/>
-  <polygon id="s64" class="cls-1" points="1837.5 661.5 1781.5 567.5 1747.5 558.5 1781.5 626.5 1837.5 661.5"/>
+<!--   <polygon id="s26" class="cls-1" points="1672.5 756.5 1504.5 628.5 1469.5 567.5 1618.5 661.5 1672.5 756.5"/> -->
+<!--   <polygon id="s64" class="cls-1" points="1837.5 661.5 1781.5 567.5 1747.5 558.5 1781.5 626.5 1837.5 661.5"/> -->
   <polygon id="s25" class="cls-1" points="1702.89 380 1645.5 479.5 1672.5 486.5 1733.5 380.5 1702.89 380"/>
   <polygon id="s10" class="cls-1" points="1539.5 647.5 1493.5 623.5 1445.5 538.5 1487.5 558.5 1539.5 647.5"/>
   <polygon id="s9" class="cls-1" points="1485.5 186.5 1512.5 173.5 1552.5 104.5 1522.5 121.5 1485.5 186.5"/>
@@ -247,39 +256,39 @@
   </g>
   <g id="m_d_i_a_box" data-attach="#_13" class="attached raleway">
       <polygon id="_13" data-name="13" class="cls-2" points="1461.44 379.5 1365.02 379.5 1316.82 463 1365.02 546.5 1461.44 546.5 1509.65 463 1461.44 379.5"/>
-      <text x="1030" y="425" data-x-rel="-125" id="mdia7" class="ux">multi -</text>
-      <text x="1010" y="450" data-x-rel="-145" id="mdia8" class="ux">dimensional</text>
-      <text x="1015" y="475" data-x-rel="-140" id="mdia9" class="ux">information</text>
-      <text x="1010" y="500" data-x-rel="-145" id="mdia10" class="ux">architecture</text>
+      <text x="1030" y="425" data-x-rel="-125" id="mdia7" class="ux"></text>
+      <text x="1010" y="450" data-x-rel="-145" id="mdia8" class="ux">i like</text>
+      <text x="1015" y="475" data-x-rel="-140" id="mdia9" class="ux">VR</text>
+      <text x="1010" y="500" data-x-rel="-145" id="mdia10" class="ux"></text>
   </g>
   <polygon id="s44" class="cls-1" points="1455.5 602.5 1369.5 549.5 1331.5 470.5 1392.5 493.5 1455.5 602.5"/>
   <polygon id="_15" data-name="15" class="cls-2" points="1642.1 469.5 1539.29 469.5 1487.89 558.53 1539.29 647.57 1642.1 647.57 1693.5 558.53 1642.1 469.5"/>
-  <polygon id="s31" class="cls-1" points="1693.5 558.5 1672.5 567.5 1618.5 661.5 1642.5 647.5 1693.5 558.5"/>
+<!--   <polygon id="s31" class="cls-1" points="1693.5 558.5 1672.5 567.5 1618.5 661.5 1642.5 647.5 1693.5 558.5"/> -->
   <polygon id="s12" class="cls-1" points="1461.5 379.5 1535.5 379.5 1592.5 479.5 1509.5 462.5 1461.5 379.5"/>
-  <polygon id="_21" data-name="21" class="cls-2" points="1782.56 567.5 1673.44 567.5 1618.88 662 1673.44 756.5 1782.56 756.5 1837.12 662 1782.56 567.5"/>
+<!--   <polygon id="_21" data-name="21" class="cls-2" points="1782.56 567.5 1673.44 567.5 1618.88 662 1673.44 756.5 1782.56 756.5 1837.12 662 1782.56 567.5"/> -->
   <polygon id="s24" class="cls-1" points="1646.5 475.5 1697.5 564.5 1733.5 591.5 1672.5 486.5 1646.5 475.5"/>
   <polygon id="s2" class="cls-1" points="1035.5 178.5 1022.5 104.5 1074.5 196.5 1074.5 245.5 1035.5 178.5"/>
   <polygon id="_6" data-name="6" class="cls-2" points="1170.57 214.29 1075.19 214.29 1027.5 296.9 1075.19 379.5 1170.57 379.5 1218.26 296.9 1170.57 214.29"/>
   <g id="i_r_p_box" data-attach="#_11" class="attached raleway">
       <polygon id="_11" data-name="11" class="cls-2" points="1480.88 204.16 1379.66 204.16 1329.04 291.83 1379.66 379.5 1480.88 379.5 1531.5 291.83 1480.88 204.16"/>
-      <text x="1050" y="275" data-x-rel="-128" id="tirp5" class="ux">ideation</text>
-      <text x="1050" y="300" data-x-rel="-128" id="tirp6" class="ux">+ rapid</text>
-      <text x="1028" y="325" data-x-rel="-150" id="tirp7" class="ux">prototyping</text>
+      <text x="1050" y="275" data-x-rel="-128" id="tirp5" class="ux">i like</text>
+      <text x="1050" y="300" data-x-rel="-128" id="tirp6" class="ux">AI</text>
+      <text x="1028" y="325" data-x-rel="-150" id="tirp7" class="ux"></text>
   </g>
   <polygon id="s5" class="cls-1" points="1329.5 467.5 1391.5 490.5 1264.5 490.5 1226.5 467.5 1329.5 467.5"/>
   <g id="ux_title_box" data-attach="#_4" class="attached raleway">
       <polygon id="_4" data-name="4" class="cls-2" points="1180.83 13.5 1075.17 13.5 1022.35 105 1075.17 196.5 1180.83 196.5 1233.65 105 1180.83 13.5"/>
-      <text x="750" y="100" data-x-rel="-130" id="ux1" class="titleux">user</text>
-      <text x="720" y="120" data-x-rel="-160" id="ux2" class="titleux">experience</text>
+<!--       <text x="750" y="100" data-x-rel="-130" id="ux1" class="titleux">user</text> -->
+<!--       <text x="720" y="120" data-x-rel="-160" id="ux2" class="titleux">experience</text> -->
   </g>
   <polygon id="s19" class="cls-1" points="1074.5 214.5 1170.5 214.5 1180.5 196.5 1074.5 196.5 1074.5 214.5"/>
   <polygon id="s18" class="cls-1" points="1197.5 169.5 1170.5 214.5 1218.5 296.5 1258.5 273.5 1197.5 169.5"/>
   <g id="r_b_d_box" data-attach="#_12" class="attached raleway">
       <polygon id="_12" data-name="12" class="cls-2" points="1328.98 292.5 1227.95 292.5 1177.43 380 1227.95 467.5 1328.98 467.5 1379.5 380 1328.98 292.5"/>
-      <text x="885" y="350" data-x-rel="-140" id="tr3" class="ux">research</text>
-      <text x="875" y="375" data-x-rel="-150" id="tr4" class="ux">by design &amp;</text>
-      <text x="880" y="400" data-x-rel="-145" id="tr5" class="ux">design by</text>
-      <text x="885" y="425" data-x-rel="-140" id="tr6" class="ux">research</text>
+      <text x="885" y="350" data-x-rel="-140" id="tr3" class="ux"></text>
+      <text x="875" y="375" data-x-rel="-150" id="tr4" class="ux">i like</text>
+      <text x="880" y="400" data-x-rel="-145" id="tr5" class="ux">3D</text>
+      <text x="885" y="425" data-x-rel="-140" id="tr6" class="ux"></text>
   </g>
   <polygon id="s47" class="cls-1" points="1379.5 273.5 1439.5 169.5 1378.5 195.5 1332.5 283.5 1379.5 273.5"/>
   <polygon id="s4" class="cls-1" points="1226.5 292.5 1258.5 273.5 1379.5 273.5 1329.5 292.5 1226.5 292.5"/>
@@ -302,36 +311,30 @@
   <polygon id="_46" data-name="46" class="cls-2" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
   <polygon id="s86" class="cls-1" points="2833.5 293.5 2939.5 273.5 3060.5 273.5 2934.5 293.5 2833.5 293.5"/>
   <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
-      <clipPath id="clipPath_wolf_box">
+<!--       <clipPath id="clipPath_wolf_box">
           <polygon points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       </clipPath>
-      <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/>
+      <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/> -->
       <polygon id="_18" data-name="18" class="cls-2 project_box has_link" points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion">UX CASE STUDY:</a></text>
-      <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="projects/wolflion">an online pet</a></text>
-      <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="projects/wolflion">store experience</a></text>
       <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/wolflion">wolf &amp; lion</a></text>
   </g>
   <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
-      <clipPath id="clipPath_resonate_box">
+<!--       <clipPath id="clipPath_resonate_box">
           <polygon points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       </clipPath>
-      <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/>
+      <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/> -->
       <polygon id="_7" data-name="7" class="cls-2 project_box has_link" points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       <text x="920" y="85" data-x-rel="-165" id="trai6" class="casestudy"><a href="projects/resonateai">UX CASE STUDY:</a></text>
-      <text x="905" y="145" data-x-rel="-180" id="trai9"class="projectdescription"><a href="projects/resonateai">let ai help you tell</a></text>
-      <text x="908" y="165" data-x-rel="-177" id="trai10"class="projectdescription"><a href="projects/resonateai">an effective story</a></text>
       <text x="912" y="255" data-x-rel="-173" id="trai8" class="projectname"><a href="projects/resonateai">resonate.ai</a></text>
   </g>
   <g id="sfac_box" data-attach="#_16" class="attached" style="clip-path: url(#clipPath_sfac_box);" data-clip-path="#clipPath_sfac_box">
-      <clipPath id="clipPath_sfac_box">
+<!--       <clipPath id="clipPath_sfac_box">
           <polygon points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       </clipPath>
-      <image width="350" height="220" x="1125" y="270" data-x-rel="-280" xlink:href="img/sfac_intro.png" class="image" id="sfac_intro"/>
+      <image width="350" height="220" x="1125" y="270" data-x-rel="-280" xlink:href="img/sfac_intro.png" class="image" id="sfac_intro"/> -->
       <polygon id="_16" data-name="16" class="cls-2 project_box has_link" points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       <text x="1255" y="300" data-x-rel="-155" id="trsf6" class="casestudy"><a href="projects/sfac">UX CASE STUDY:</a></text>
-      <text x="1235" y="330" data-x-rel="-175" id="trsf9"class="projectdescription"><a href="projects/sfac">engage citizens in</a></text>
-      <text x="1230" y="350" data-x-rel="-180" id="trsf10"class="projectdescription"><a href="projects/sfac">choosing public art</a></text>
       <text x="1280" y="460" data-x-rel="-130" id="trsf8" class="projectname"><a href="projects/sfac">sfac</a></text>                
   </g>
   <polygon id="_20" data-name="20" class="cls-2" points="1855.5 380.51 1733.5 380.51 1672.5 486.17 1733.5 591.82 1855.5 591.82 1916.5 486.17 1855.5 380.51"/>
