navigation getting better

--- a/aartics/projects/aarti_horiz/index.htm
+++ b/aartics/projects/aarti_horiz/index.htm
@@ -23,14 +23,18 @@
         <li class="a_top_hypers"><button class="topbut" id="area6">Resume</button></li>
     </ul>
     </header>
+    <div class="aarticslogo">
+        <a href="#about" id="logo"><img id="icon" width="40px" src="aartics_icon.png"/></a>
+    </div>
     <div class="backgroundgrad">
     </div>
-    <div class="child3">
+    <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
         <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures. I am passionate about mixed realities, and I'm not afraid of complexity.<br><br><br><br>see my <span>UX projects</span> or dive into <span>other designs.</span></p>
     </div>
     <div class="child4 bzuttons">
       <ul id="ul_home_hypers">
+          <li class="home_buts"><button class="homebut" id="bz0">About</button></li>
           <li class="home_buts"><button class="homebut" id="bz1">UX Designer</button></li>
           <li class="home_buts"><button class="homebut" id="bz2">Architect</button></li>
           <li class="home_buts"><button class="homebut" id="bz3">Maker</button></li>
